--- a/package.json
+++ b/package.json
@@ -8,9 +8,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/space-grotesk": "^4.5.0",
+    "@truffle/hdwallet-provider": "^2.0.0",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.5.3",
+    "framer-motion": "^5.5.6",
+    "fs-extra": "^10.0.0",
+    "ganache-cli": "^6.12.2",
+    "mocha": "^9.1.3",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-confetti": "^6.0.1",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.22.5",
+    "react-icons": "^4.3.1",
+    "react-use": "^17.3.2",
+    "solc": "^0.8.11",
+    "use-wallet": "^0.13.4",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "eslint": "8.6.0",
