--- a/smart-contract/.env
+++ b/smart-contract/.env
@@ -1,2 +1,2 @@
-mnemonic = 'nest detect equip bike glue donor catalog bamboo enjoy dwarf swing answer'
+mnemonic = 'emerge output ocean awesome kick ahead skin hat seven card caution when'
 link = 'HTTP://127.0.0.1:7545'
