--- a/smart-contract/.env
+++ b/smart-contract/.env
@@ -1,2 +1,2 @@
-mnemonic = 'emerge output ocean awesome kick ahead skin hat seven card caution when'
+mnemonic = 'assume knock bounce chase silent welcome reward grass oil holiday retire onion'
 link = 'HTTP://127.0.0.1:7545'
